# B5

./: .gitignore  README.md
content/W4/: README.md  pyproject.toml
content/W4/M1/exercises/: 01_eda_penguins_ex.ipynb  01_eda_penguins_sol.ipynb  02_linear_regression_ex.ipynb  03_linear_regression_ex.ipynb
content/W4/M1/lessons/: 01_slides_Intro_ML.qmd  02_slides_linear_models.qmd  03_lab_linear_models.ipynb  04_slides_non_linear_patterns.qmd  05_lab_non_linear_patterns.ipynb
content/W4/M1/quizzes/: 01_Intro_ML_slides_assessment.qmd  02_linear_models_assessment.qmd  (+2 more)
old/W4_DL/: lab_setup.md  pyproject.toml
old/W6_GenAI/: .gitignore  README.md  pyproject.toml
old/W6_GenAI/D1/: day_1a_prompting.ipynb  day_1a_prompting.py  day_1b_evaluation-and-structured-output.ipynb  day_1b_evaluation-and-structured-output.py
old/W6_GenAI/D2/: day_2_classifier_pytorch.ipynb  day_2_classifier_pytorch.py  day_2_qa_rag.ipynb  day_2_qa_rag.py  day_2_similarity.ipynb  day_2_similarity.py
old/W6_GenAI/D3/: day_3a_from_prompt_to_action.ipynb  day_3a_from_prompt_to_action.py  day_3b_agent_architectures.ipynb  day_3b_agent_architectures.py  search_tool.py
old/W6_GenAI/D4/: day_4a_agent_tools.ipynb  day_4a_agent_tools.py  day_4b_agent_tools_best_practices.ipynb  day_4b_agent_tools_best_practices.py
old/W6_GenAI/D5/: day_5a_agent_sessions.py  day_5b_agent_memory.py
old/W6_GenAI/D6/: day_6a_agent_observability.py  day_6b_agent_evaluation.py
old/W6_GenAI/D7/: day_7a_agent2agent_communication.py  day_7b_agent_deployment.py
old/W6_GenAI/appendix/: how-to-run-llm.md  visual.md
(+148 files in other folders)
