[project]
name = "w4-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlai-grader>=2.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "weasyprint>=67.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "nbconvert>=7.16.6",
]
