[project]
name = "w6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "ddgs>=9.10.0",
    "google-adk>=1.22.1",
    "litellm>=1.81.0",
    "markitdown[all,pdf,youtube-transcription]>=0.1.4",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupytext>=1.18.1",
]
